# faktor

./: .gitignore  .gitmodules  .mocharc.json  Anchor.toml  README.md  babel.config.js  package-lock.json  package.json  tsconfig.json
app/: .env.template  .env.test  .eslintrc  .gitignore  .prettierrc  babel.config.js  craco.config.js  jest.config.js  jest.setup.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.paths.json
app/configs/: alice-keypair.json  bob-keypair.json
app/pages/: index.tsx
app/public/: index.html  manifest.json
app/src/: App.js  App.tsx  AppLayout.tsx  idl.json  index.css  index.tsx  routes.tsx  types.ts  utils.ts
app/src/actions/: airdrop.ts  createCounter.ts  createMessage.ts  getBalance.ts  getUserFriends.ts  incrementCounter.ts  index.ts  useFriends.ts
app/src/api/: checkWalletAddressExists.ts  createInvoice.ts  index.ts  issueInvoice.ts  payInvoice.ts
app/src/app/: App.tsx  AppState.tsx  Header.tsx  Routes.tsx  endpoints.ts  index.tsx
app/src/components/: ActionButtons.tsx  InputField.tsx  InvoiceTable.tsx  RecipientSelect.tsx  SolanaLogo.tsx  index.ts
app/src/contexts/: appState.tsx
app/src/core/: connection.ts  constants.ts  enums.ts  faktor.idl.json  idl.json  idl.ts  index.ts  solstream.idl.json  token.ts  user.ts  utils.ts  wallet.ts
app/src/hooks/: index.ts  (+1 more)
programs/cashflow/: Cargo.toml
programs/cashflow/src/: lib.rs
programs/faktor/: Cargo.toml
programs/solstream/: Cargo.toml
test/: babel-register.js  faktor.spec.ts
tests/: cashflow.js  faktor.js  faktor.ts  solstream.js
(+109 files in other folders)
