[package]
name = "cashflow"
version = "0.1.0"
description = "Scheduled and recurring token transfers"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "cashflow"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.16.0"
priority-queue = "1.2.0"
solana-program = "1.6.9"
